--- a/src/app/modules/educational-institution/educational-institution-modal/educational-institution-modal.component.html
+++ b/src/app/modules/educational-institution/educational-institution-modal/educational-institution-modal.component.html
@@ -10,7 +10,7 @@
     <div class="content" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
       <!-- REACTIVE FORM EXAMPLE -->
   
-      <form (ngSubmit)="onSubmit()" class="mat-card mat-elevation-z4" fxLayout="column" fxLayoutAlign="space-between" fxFlex="1 0 auto"
+      <form (ngSubmit)="onSubmit()" fxLayout="column" fxLayoutAlign="space-between" fxFlex="1 0 auto"
         name="form" [formGroup]="form">
   
         <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
