add create new user feature

--- a/src/app/modules/classe/classe-modal/classe-modal.component.html
+++ b/src/app/modules/classe/classe-modal/classe-modal.component.html
@@ -1,7 +1,7 @@
 <div id="forms" class="page-layout" fxLayout="column">
 
   <!-- HEADER -->
-  <span class="header-left">Add New Classe</span>
+  <span class="header-left">Add New Class</span>
   <mat-divider class="header-divider"></mat-divider>
 
   <!-- / HEADER -->
