--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -42,7 +42,8 @@
         <!-- Progress Column -->
         <ng-container matColumnDef="profilePicture">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-          <td mat-cell *matCellDef="let row"> {{row.profilePicture}} </td>
+          <td mat-cell *matCellDef="let row">
+            <img src={{row.profilePicture}} /> </td>
         </ng-container>
 
         <!-- Name Column -->
