--- a/src/app/modules/course/course-modal/course-modal.component.html
+++ b/src/app/modules/course/course-modal/course-modal.component.html
@@ -18,7 +18,7 @@
           <mat-label>Classe</mat-label>
           <mat-select formControlName="classe" required>
             <mat-option *ngFor="let classe of classes" [value]="classe">
-              {{classe.className}}
+              {{classe.className}} - {{classe.field.level.establishment.establishmentName}}
             </mat-option>
           </mat-select>
           <mat-icon matSuffix class="secondary-text">collections_bookmark</mat-icon>
