--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -1,7 +1,7 @@
 <div class="custom-container">
     <div class="header">
         <span class="header-left">Educational Institutions</span>
-        <button mat-raised-button class="btn-create primary"  (click)="openDialog()">
+        <button mat-raised-button class="btn-create primary" (click)="openDialog()">
             <mat-icon>add</mat-icon>
             <span class="btn-create-text">Add New Educational Institution</span>
         </button>
@@ -44,7 +44,7 @@
                 <!-- Progress Column -->
                 <ng-container matColumnDef="photos">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Logo </th>
-                    <td mat-cell *matCellDef="let row"> {{row.photos}} </td>
+                    <td mat-cell *matCellDef="let row"> <img src={{row.photos}} /> </td>
                 </ng-container>
 
                 <!-- Name Column -->
