--- a/src/app/modules/field/field-modal/field-modal.component.html
+++ b/src/app/modules/field/field-modal/field-modal.component.html
@@ -18,7 +18,7 @@
           <mat-label>Level</mat-label>
           <mat-select formControlName="level" required>
             <mat-option *ngFor="let level of levels" [value]="level">
-              {{level.levelName}}
+              {{level.levelName}} - {{level.establishment.establishmentName}}
             </mat-option>
           </mat-select>
           <mat-icon matSuffix class="secondary-text">collections_bookmark</mat-icon>
