--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import "~@ctrl/ngx-emoji-mart/picker";
 @import "assets/css/font-awesome.min.css";
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 .logo span.fa {
     color: #3498db;
     font-size: 6em;
