add the update and delete features to class component

--- a/src/app/modules/course/course-modal/course-modal.component.html
+++ b/src/app/modules/course/course-modal/course-modal.component.html
@@ -61,7 +61,7 @@
         <button mat-raised-button [disabled]="!form.valid" color="primary" class="btn-save">
           <mat-icon>save</mat-icon> save
         </button>
-        <button mat-raised-button color="warn" class="btn-delete" (click)="onNoClick()">
+        <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
           <mat-icon>cancel</mat-icon> Cancel
         </button>
       </div>
