--- a/src/app/modules/educational-institution/educational-institution-modal/educational-institution-modal.component.html
+++ b/src/app/modules/educational-institution/educational-institution-modal/educational-institution-modal.component.html
@@ -64,7 +64,7 @@
   
         <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
           <button mat-raised-button [disabled]="!form.valid" color="primary" class="btn-save"><mat-icon>save</mat-icon> save </button>
-          <button mat-raised-button color="warn" class="btn-delete"> <mat-icon>cancel</mat-icon> Cancel </button>
+          <button mat-raised-button  class="btn btn-success"> <mat-icon>cancel</mat-icon> Cancel </button>
         </div>
       </form>
     </div>
