--- a/src/app/modules/user/user-modal/user-modal.component.html
+++ b/src/app/modules/user/user-modal/user-modal.component.html
@@ -80,7 +80,7 @@
       <button mat-raised-button [disabled]="!administrationForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
-      <button mat-raised-button color="warn" class="btn-delete" (click)="onNoClick()">
+      <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
         <mat-icon>cancel</mat-icon> Cancel
       </button>
     </div>
@@ -140,7 +140,7 @@
       <button mat-raised-button [disabled]="!professorForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
-      <button mat-raised-button color="warn" class="btn-delete" (click)="onNoClick()">
+      <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
         <mat-icon>cancel</mat-icon> Cancel
       </button>
     </div>
@@ -214,7 +214,7 @@
       <button mat-raised-button [disabled]="!studentForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
-      <button mat-raised-button color="warn" class="btn-delete" (click)="onNoClick()">
+      <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
         <mat-icon>cancel</mat-icon> Cancel
       </button>
     </div>
