--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -90,7 +90,13 @@
         <ng-container matColumnDef="more" stickyEnd>
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row">
-            <mat-icon>more_vert</mat-icon>
+            <mat-icon (click)=select.open()>more_vert</mat-icon>
+            <mat-select #select class="mat-select-container" style="visibility:hidden">
+              <mat-option (click)="openDialog(row,'update')">Update User</mat-option>
+              <mat-option (click)="openDialog(row,'reset')">Reset Password</mat-option>
+              <mat-divider class="divider-container"></mat-divider>
+              <mat-option (click)="openDialog(row,'delete')">Delete User</mat-option>
+            </mat-select>
           </td>
         </ng-container>
 
