--- a/src/app/modules/classe/classe/classe.component.html
+++ b/src/app/modules/classe/classe/classe.component.html
@@ -1,7 +1,7 @@
 <div class="custom-container">
   <div class="header">
     <span class="header-left">Classes Management</span>
-    <button mat-raised-button class="btn-create primary" (click)="openDialog()">
+    <button mat-raised-button class="btn-create primary" (click)="openDialog(null,'create')">
       <mat-icon>add</mat-icon>
       <span class="btn-create-text">Add New Classe</span>
     </button>
@@ -61,7 +61,12 @@
         <ng-container matColumnDef="more" stickyEnd>
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row">
-            <mat-icon>more_vert</mat-icon>
+              <mat-icon (click)=select.open()>more_vert</mat-icon>
+              <mat-select #select class="mat-select-container" style="visibility:hidden">
+                  <mat-option (click)="openDialog(row,'update')">Update Class</mat-option>
+                  <mat-divider class="divider-container"></mat-divider>
+                  <mat-option (click)="openDialog(row,'delete')">Delete Class</mat-option>
+              </mat-select>
           </td>
         </ng-container>
 
