--- a/src/app/modules/field/field/field.component.html
+++ b/src/app/modules/field/field/field.component.html
@@ -61,10 +61,14 @@
         <ng-container matColumnDef="more" stickyEnd>
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let row">
-            <mat-icon>more_vert</mat-icon>
+            <mat-icon (click)=select.open()>more_vert</mat-icon>
+            <mat-select #select class="mat-select-container" style="visibility:hidden">
+              <mat-option (click)="openDialog(row,'update')">Update Field</mat-option>
+              <mat-divider class="divider-container"></mat-divider>
+              <mat-option (click)="openDialog(row,'delete')">Delete Field</mat-option>
+            </mat-select>
           </td>
         </ng-container>
-        <mat-icon>more_vert</mat-icon>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
         </tr>
