--- a/src/app/modules/course/course-modal/course-modal.component.html
+++ b/src/app/modules/course/course-modal/course-modal.component.html
@@ -1,72 +1,89 @@
-<div id="forms" class="page-layout" fxLayout="column">
+<div id="forms" class="page-layout" fxLayout="column" [ngSwitch]="true">
 
-  <!-- HEADER -->
-  <span class="header-left">Add New Course</span>
-  <mat-divider class="header-divider"></mat-divider>
+  <ng-template [ngSwitchCase]="action === 'create'|| action ==='update'">
+    <!-- HEADER -->
+    <span class="header-left" *ngIf="action ==='create'">Add New Course</span>
+    <span class="header-left" *ngIf="action ==='update'">Update Course</span>
+    <mat-divider class="header-divider"></mat-divider>
 
-  <!-- / HEADER -->
+    <!-- / HEADER -->
 
-  <!-- CONTENT -->
-  <div class="content" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
-    <!-- REACTIVE FORM EXAMPLE -->
+    <!-- CONTENT -->
+    <div class="content" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
+      <!-- REACTIVE FORM EXAMPLE -->
 
-    <form (ngSubmit)="onSubmit()" fxLayout="column" fxLayoutAlign="space-between" fxFlex="1 0 auto" name="form"
-      [formGroup]="form">
+      <form (ngSubmit)="onSubmit()" fxLayout="column" fxLayoutAlign="space-between" fxFlex="1 0 auto" name="form"
+        [formGroup]="form">
 
-      <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-        <mat-form-field appearance="outline" fxFlex="100">
-          <mat-label>Classe</mat-label>
-          <mat-select formControlName="classe" required>
-            <mat-option *ngFor="let classe of classes" [value]="classe">
-              {{classe.className}} - {{classe.field.level.establishment.establishmentName}}
-            </mat-option>
-          </mat-select>
-          <mat-icon matSuffix class="secondary-text">collections_bookmark</mat-icon>
-          <mat-error>Classe is required!</mat-error>
-        </mat-form-field>
-      </div>
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100">
+            <mat-label>Classe</mat-label>
+            <mat-select formControlName="classe" required>
+              <mat-option *ngFor="let classe of classes" [value]="classe.id">
+                {{classe.className}} - {{classe.field.level.establishment.establishmentName}}
+              </mat-option>
+            </mat-select>
+            <mat-icon matSuffix class="secondary-text">collections_bookmark</mat-icon>
+            <mat-error>Classe is required!</mat-error>
+          </mat-form-field>
+        </div>
 
-      <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-        <mat-form-field appearance="outline" fxFlex="100">
-          <mat-label>Professor</mat-label>
-          <mat-select formControlName="professor" required>
-            <mat-option *ngFor="let professor of professors" [value]="professor">
-              {{professor.firstName}} {{professor.lastName}}
-            </mat-option>
-          </mat-select>
-          <mat-icon matSuffix class="secondary-text">collections_bookmark</mat-icon>
-          <mat-error>User is required!</mat-error>
-        </mat-form-field>
-      </div>
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100">
+            <mat-label>Professor</mat-label>
+            <mat-select formControlName="professor" required>
+              <mat-option *ngFor="let professor of professors" [value]="professor.id">
+                {{professor.firstName}} {{professor.lastName}}
+              </mat-option>
+            </mat-select>
+            <mat-icon matSuffix class="secondary-text">collections_bookmark</mat-icon>
+            <mat-error>User is required!</mat-error>
+          </mat-form-field>
+        </div>
 
-      <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
-        <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
-          <mat-label>Course Name</mat-label>
-          <input matInput formControlName="courseName" required>
-          <mat-icon matSuffix class="secondary-text">class</mat-icon>
-          <mat-error>Course Name is required!</mat-error>
-        </mat-form-field>
-      </div>
+        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
+            <mat-label>Course Name</mat-label>
+            <input matInput formControlName="courseName" required>
+            <mat-icon matSuffix class="secondary-text">class</mat-icon>
+            <mat-error>Course Name is required!</mat-error>
+          </mat-form-field>
+        </div>
 
-      <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-        <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
-          <mat-label>Description</mat-label>
-          <input matInput formControlName="description" required>
-          <mat-icon matSuffix class="secondary-text">toc</mat-icon>
-          <mat-error>Description is required!</mat-error>
-        </mat-form-field>
-      </div>
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <mat-form-field appearance="outline" fxFlex="100" class="pr-4">
+            <mat-label>Description</mat-label>
+            <input matInput formControlName="description" required>
+            <mat-icon matSuffix class="secondary-text">toc</mat-icon>
+            <mat-error>Description is required!</mat-error>
+          </mat-form-field>
+        </div>
 
-      <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-        <button mat-raised-button [disabled]="!form.valid" color="primary" class="btn-save">
-          <mat-icon>save</mat-icon> save
-        </button>
-        <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
-          <mat-icon>cancel</mat-icon> Cancel
-        </button>
-      </div>
-    </form>
-  </div>
-  <!-- / CONTENT -->
+        <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+          <button mat-raised-button [disabled]="!form.valid" color="primary" class="btn-save">
+            <mat-icon>save</mat-icon> save
+          </button>
+          <button mat-raised-button class="btn btn-success" (click)="onNoClick()">
+            <mat-icon>cancel</mat-icon> Cancel
+          </button>
+        </div>
+      </form>
+    </div>
+    <!-- / CONTENT -->
+  </ng-template>
 
+  <ng-template [ngSwitchCase]="action === 'delete'">
+    <div class="modal-header">
+      <strong>
+        <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
+      </strong>
+    </div>
+    <div class="modal-body">
+      Do you want to delete this course ?
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-success" data-dismiss="modal" (click)="onNoClick()">Cancel </button>
+      <button type="button" class="btn btn-danger" (click)="delete()" cdkFocusInitial>Confirm</button>
+    </div>
+  </ng-template>
 </div>
