--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -12,7 +12,7 @@
 <ng-template #superAdminUI>
     <div class="header">
         <span class="header-left">Educational Institutions</span>
-        <button mat-raised-button class="btn-create primary" (click)="openDialog()">
+        <button mat-raised-button class="btn-create primary" (click)="openDialog(null,'create')">
             <mat-icon>add</mat-icon>
             <span class="btn-create-text">Add New Educational Institution</span>
         </button>
