--- a/src/app/modules/classe/classe/classe.component.html
+++ b/src/app/modules/classe/classe/classe.component.html
@@ -60,13 +60,13 @@
         <!-- more Column -->
         <ng-container matColumnDef="more" stickyEnd>
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let row">
-              <mat-icon (click)=select.open()>more_vert</mat-icon>
-              <mat-select #select class="mat-select-container" style="visibility:hidden">
-                  <mat-option (click)="openDialog(row,'update')">Update Class</mat-option>
-                  <mat-divider class="divider-container"></mat-divider>
-                  <mat-option (click)="openDialog(row,'delete')">Delete Class</mat-option>
-              </mat-select>
+          <td mat-cell *matCellDef="let row" class="pointer">
+            <mat-icon (click)=select.open()>more_vert</mat-icon>
+            <mat-select #select class="mat-select-container" style="visibility:hidden">
+              <mat-option (click)="openDialog(row,'update')">Update Class</mat-option>
+              <mat-divider class="divider-container"></mat-divider>
+              <mat-option (click)="openDialog(row,'delete')">Delete Class</mat-option>
+            </mat-select>
           </td>
         </ng-container>
 
@@ -89,6 +89,6 @@
     </div>
   </div>
   <div class="empty-data-source" *ngIf="classes.length == 0">
-      <span>Your Data Base Of Classes Is Empty </span>
+    <span>Your Data Base Of Classes Is Empty </span>
   </div>
 </div>
