--- a/src/app/modules/educational-institution/educational-institution.component.html
+++ b/src/app/modules/educational-institution/educational-institution.component.html
@@ -91,7 +91,7 @@
                 <!-- Star Column -->
                 <ng-container matColumnDef="more" stickyEnd>
                     <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let row">
+                    <td mat-cell *matCellDef="let row" class="pointer">
                         <mat-icon (click)=select.open()>more_vert</mat-icon>
                         <mat-select #select class="mat-select-container" style="visibility:hidden">
                             <mat-option (click)="openDialog(row,'update')">Update Educationnal Institution</mat-option>
