--- a/src/app/modules/field/field/field.component.html
+++ b/src/app/modules/field/field/field.component.html
@@ -60,7 +60,7 @@
         <!-- Star Column -->
         <ng-container matColumnDef="more" stickyEnd>
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="pointer">
             <mat-icon (click)=select.open()>more_vert</mat-icon>
             <mat-select #select class="mat-select-container" style="visibility:hidden">
               <mat-option (click)="openDialog(row,'update')">Update Field</mat-option>
