--- a/src/app/modules/user/user-modal/user-modal.component.html
+++ b/src/app/modules/user/user-modal/user-modal.component.html
@@ -1,30 +1,50 @@
-<div id="forms" class="page-layout" fxLayout="column">
+<div id="forms" class="page-layout" fxLayout="column" [ngSwitch]="true">
 
-  <!-- HEADER -->
-  <span class="header-left">Add New User</span>
-  <mat-divider class="header-divider"></mat-divider>
-  <!-- / HEADER -->
+  <ng-template [ngSwitchCase]="action === 'create'|| action ==='update'">
+    <!-- HEADER -->
+    <span class="header-left" *ngIf="action==='create'">Add New User</span>
+    <span class="header-left" *ngIf="action==='update' && selectedTabIndex===0">Update Administration</span>
+    <span class="header-left" *ngIf="action==='update' && selectedTabIndex===1">Update Professor</span>
+    <span class="header-left" *ngIf="action==='update' && selectedTabIndex===2">Update Student</span>
+    <mat-divider class="header-divider"></mat-divider>
+    <!-- / HEADER -->
 
-  <!-- CONTENT -->
-  <div class="content" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
-    <!-- REACTIVE FORM EXAMPLE -->
+    <!-- CONTENT -->
+    <div class="content" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
+      <!-- REACTIVE FORM EXAMPLE -->
 
-    <mat-tab-group dynamicHeight (selectedTabChange)="changeTab($event)">
+      <mat-tab-group dynamicHeight (selectedTabChange)="changeTab($event)" [(selectedIndex)]="selectedTabIndex">
 
-      <mat-tab label="Administration">
-        <ng-container *ngTemplateOutlet="administrationTabForm"></ng-container>
-      </mat-tab>
+        <mat-tab label="Administration" [disabled]="selectedTabIndex!==0 && action ==='update'">
+          <ng-container *ngTemplateOutlet="administrationTabForm"></ng-container>
+        </mat-tab>
 
-      <mat-tab label="Professor">
-        <ng-container *ngTemplateOutlet="professorTabForm"></ng-container>
-      </mat-tab>
+        <mat-tab label="Professor" [disabled]="selectedTabIndex!==1 && action ==='update'">
+          <ng-container *ngTemplateOutlet="professorTabForm"></ng-container>
+        </mat-tab>
 
-      <mat-tab label="Student">
-        <ng-container *ngTemplateOutlet="studentTabForm"></ng-container>
-      </mat-tab>
-    </mat-tab-group>
-  </div>
-  <!-- / CONTENT -->
+        <mat-tab label="Student" [disabled]="selectedTabIndex!==2 && action ==='update'">
+          <ng-container *ngTemplateOutlet="studentTabForm"></ng-container>
+        </mat-tab>
+      </mat-tab-group>
+    </div>
+    <!-- / CONTENT -->
+  </ng-template>
+
+  <ng-template [ngSwitchCase]="action === 'delete'">
+    <div class="modal-header">
+      <strong>
+        <h5 class="modal-title" id="exampleModalLabel">Warning</h5>
+      </strong>
+    </div>
+    <div class="modal-body">
+      Do you want to delete this User ?
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-success" data-dismiss="modal" (click)="onNoClick()">Cancel </button>
+      <button type="button" class="btn btn-danger" (click)="delete()" cdkFocusInitial>Confirm</button>
+    </div>
+  </ng-template>
 </div>
 
 <!--Student Form-->
@@ -80,7 +100,7 @@
       <button mat-raised-button [disabled]="!administrationForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
-      <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
+      <button mat-raised-button class="btn btn-success" (click)="onNoClick()">
         <mat-icon>cancel</mat-icon> Cancel
       </button>
     </div>
@@ -140,7 +160,7 @@
       <button mat-raised-button [disabled]="!professorForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
-      <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
+      <button mat-raised-button class="btn btn-success" (click)="onNoClick()">
         <mat-icon>cancel</mat-icon> Cancel
       </button>
     </div>
@@ -156,7 +176,7 @@
       <mat-form-field appearance="outline" fxFlex="100">
         <mat-label>Educational Institutions</mat-label>
         <mat-select formControlName="establishment" required>
-          <mat-option *ngFor="let establishment of educationalInstitutions" [value]="establishment">
+          <mat-option *ngFor="let establishment of educationalInstitutions" [value]="establishment.id">
             {{establishment.establishmentName}}
           </mat-option>
         </mat-select>
@@ -214,7 +234,7 @@
       <button mat-raised-button [disabled]="!studentForm.valid" color="primary" class="btn-save">
         <mat-icon>save</mat-icon> save
       </button>
-      <button mat-raised-button  class="btn btn-success" (click)="onNoClick()">
+      <button mat-raised-button class="btn btn-success" (click)="onNoClick()">
         <mat-icon>cancel</mat-icon> Cancel
       </button>
     </div>
