--- a/src/app/modules/user/user/user.component.html
+++ b/src/app/modules/user/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="custom-container">
   <div class="header">
     <span class="header-left">Users Management</span>
-    <button mat-raised-button class="btn-create primary" (click)="openDialog()">
+    <button mat-raised-button class="btn-create primary" (click)="openDialog(null,'create')">
       <mat-icon>add</mat-icon>
       <span class="btn-create-text">Add New User</span>
     </button>
@@ -89,11 +89,11 @@
         <!-- more Column -->
         <ng-container matColumnDef="more" stickyEnd>
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let row">
+          <td mat-cell *matCellDef="let row" class="pointer">
             <mat-icon (click)=select.open()>more_vert</mat-icon>
             <mat-select #select class="mat-select-container" style="visibility:hidden">
               <mat-option (click)="openDialog(row,'update')">Update User</mat-option>
-              <mat-option (click)="openDialog(row,'reset')">Reset Password</mat-option>
+              <mat-option (click)="checkMailForResetPassword(row.email)">Reset Password</mat-option>
               <mat-divider class="divider-container"></mat-divider>
               <mat-option (click)="openDialog(row,'delete')">Delete User</mat-option>
             </mat-select>
