--- a/src/app/modules/level/level/level.component.html
+++ b/src/app/modules/level/level/level.component.html
@@ -1,7 +1,7 @@
 <div class="custom-container">
   <div class="header">
     <span class="header-left">Levels Management</span>
-    <button mat-raised-button class="btn-create primary" (click)="openDialog()">
+    <button mat-raised-button class="btn-create primary" (click)="openDialog(null,'create')">
       <mat-icon>add</mat-icon>
       <span class="btn-create-text">Add New Level</span>
     </button>
