--- a/src/app/modules/home-actors/home-actors.component.html
+++ b/src/app/modules/home-actors/home-actors.component.html
@@ -3,56 +3,73 @@
     <div fxFlex="22" class="left-column-container">
         <div class="profile-card">
             <div class="profile-card-header d-flex ">
-                <a href="/profile/edmodo-teacher-e15a0c370e-edmo/?utm_source=profile_card" class="href-profil">
-                    <img class=" img-profil" src="assets/images/avatars/profile.jpg" alt="Zayneb Hamila">
+                <a href="#" class="href-profil">
+                    <img class=" img-profil" src="{{profilePictureLink}}" alt="eps">
                 </a>
                 <mat-divider class="divider"></mat-divider>
             </div>
             <div class="profile-card-header">
-                <span class="profile-header-text">zaynab Hamila</span>
-                <a href="#">voir le profil</a>
+                <span class="profile-header-text">{{currentUser.firstName}} {{currentUser.lastName}}</span>
+                <a href="#" class="profile-header-text-email">{{currentUser.email}}</a>
             </div>
         </div>
 
         <div class="navigation-list-container">
             <div class="navigation-list-header">
                 <span class="navigation-list-title">Classes</span>
-                <mat-icon>more_horiz</mat-icon>
+                <mat-select #select class="mat-select-container" style="visibility:hidden">
+                    <mat-option (click)="openDialog('create')">Create a class</mat-option>
+                    <mat-divider class="divider-container"></mat-divider>
+                    <mat-option (click)="openDialog('joind')">Join a class</mat-option>
+                </mat-select>
+                <mat-icon (click)=select.open()>more_horiz</mat-icon>
             </div>
 
-            <div class="navigation-list list-group">
-                <li class="list-group-item" class="nav-link">
+            <div class="navigation-list list-group" *ngIf="classes.length > 0">
+                <li class="list-group-item" class="nav-link" *ngFor="let classe of classes">
                     <a class="navigation-list-item" href="/groups/dsi-28607677">
                         <span class="circle"></span>
-                        <span style="margin: 0px 0.5rem;">DSI</span>
+                        <span style="margin: 0px 0.5rem;">{{classe.className}}</span>
                     </a>
                 </li>
-                <li class="list-group-item" class="nav-link">
-                    <a class="navigation-list-item qa-test-navigation-list-item-class" href="/groups/zayneb-hamilas-classe-28607571">
-                        <span class="green-circle"></span>
-                        <span style="margin: 0px 0.5rem;">Zayneb Hamila's Classe</span></a>
-                </li>
+            </div>
+            <div class="spiner" *ngIf="groups.length ===0 && !isHiddenSpinner">
+                <mat-spinner diameter="20" color="accent"></mat-spinner>
+            </div>
+            <div class="navigation-empty-list-item" *ngIf="classes.length ===0 && isHiddenSpinner">
+                <mat-icon *ngIf="isProfessor">add</mat-icon>
+                <span style="margin: 0px 0.5rem; vertical-align: top;" *ngIf="isProfessor" (click)="openDialog()">Add
+                    New Class</span>
+                <span style="margin: 0px 0.5rem; vertical-align: top;" *ngIf="!isProfessor" (click)="openDialog()">Join
+                    Class</span>
             </div>
         </div>
 
         <div class="navigation-list-container">
             <div class="navigation-list-header">
                 <span class="navigation-list-title">Groups</span>
-                <mat-icon>more_horiz</mat-icon>
+                <mat-select #selectGroups class="mat-select-container" style="visibility:hidden">
+                    <mat-option (click)="openDialog('create')">Create a group</mat-option>
+                    <mat-divider class="divider-container"></mat-divider>
+                    <mat-option (click)="openDialog('join')">Join a group</mat-option>
+                </mat-select>
+                <mat-icon (click)=selectGroups.open()>more_horiz</mat-icon>
             </div>
 
-            <div class="navigation-list list-group">
-                <li class="list-group-item" class="nav-link">
-                    <a class="navigation-list-item" href="/groups/dsi-28607677">
+            <div class="navigation-list list-group" *ngIf="groups.length > 0">
+                <li class="list-group-item" class="nav-link" *ngFor="let group of groups">
+                    <a class="navigation-list-item" href="#">
                         <span class="circle"></span>
-                        <span style="margin: 0px 0.5rem;">DSI</span>
+                        <span style="margin: 0px 0.5rem;">{{group.groupName}}</span>
                     </a>
                 </li>
-                <li class="list-group-item" class="nav-link">
-                    <a class="navigation-list-item qa-test-navigation-list-item-class" href="/groups/zayneb-hamilas-classe-28607571">
-                        <span class="green-circle"></span>
-                        <span style="margin: 0px 0.5rem;">Zayneb Hamila's Classe</span></a>
-                </li>
+            </div>
+            <div class="spiner" *ngIf="groups.length ===0 && !isHiddenSpinner">
+                <mat-spinner diameter="20" color="accent"></mat-spinner>
+            </div>
+            <div class="navigation-empty-list-item" *ngIf="groups.length ===0 && isHiddenSpinner">
+                <mat-icon>add</mat-icon>
+                <span style="margin: 0px 0.5rem; vertical-align: top;" (click)="openDialog()">Add New Groupe</span>
             </div>
         </div>
     </div>
@@ -62,7 +79,7 @@
 
         <div class="unified-composer-container mb-3">
             <div class="input-text">
-                <img class="message-avatar rounded" src="assets/images/avatars/profile.jpg" alt="Zayneb Hamila">
+                <img class="message-avatar rounded" src="{{profilePictureLink}}" alt="cedro">
                 <textarea cols="60" placeholder="Share an idea or resources" class="postbox-textarea"></textarea>
 
             </div>
@@ -87,7 +104,8 @@
                     <mat-card-title>Shiba Inu</mat-card-title>
                     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+                <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+                    alt="Photo of a Shiba Inu">
                 <mat-card-content>
                     <p>
                         The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -107,11 +125,15 @@
                 <mat-divider></mat-divider>
                 <mat-card-footer class="mat-card-footer">
                     <div class="footer-card-mat-card-avatar">
-                        <img class="message-avatar rounded footer-card-comment-icon" src="assets/images/avatars/profile.jpg" alt="Zayneb Hamila">
+                        <img class="message-avatar rounded footer-card-comment-icon"
+                            src="assets/images/avatars/profile.jpg" alt="Zayneb Hamila">
                         <div class="mat-card-comment">
-                            <textarea [value]="state.text" cols="60" class="mat-card-comment-input" matInput type="text" placeholder="your comment..."></textarea>
-                            <emoji-mart [style]="{ position: 'absolute', bottom: '20px', right: '20px' }" (emojiClick)="addEmoji($event)" [hidden]="show"></emoji-mart>
-                            <mat-icon class="mat-card-comment-emoj" (click)="show=!show">sentiment_satisfied_alt</mat-icon>
+                            <textarea [value]="state.text" cols="60" class="mat-card-comment-input" matInput type="text"
+                                placeholder="your comment..."></textarea>
+                            <emoji-mart [style]="{ position: 'absolute', bottom: '20px', right: '20px' }"
+                                (emojiClick)="addEmoji($event)" [hidden]="show"></emoji-mart>
+                            <mat-icon class="mat-card-comment-emoj" (click)="show=!show">sentiment_satisfied_alt
+                            </mat-icon>
                             <mat-icon class="mat-card-comment-emoj">photo_camera</mat-icon>
                         </div>
                     </div>
